# TraitementVideo

./: .gitignore  README.md
TD1/: CMakeCache.txt  Makefile  cmake_install.cmake  exple  exple.cpp
TD1_exo2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exple  exple.cpp
TD2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exple  exple.cpp
project/: CMakeLists.txt  stegano  stegano.cpp  video  video.cpp
